--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+  "script": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -28,5 +28,13 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
-  }
+  },
+  "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",  
+        "deploy": "gh-pages -d build" 
+}
 }
